# mycelium

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.yml  go.mod  go.sum  main.go  mycelium-prd.md
cmd/: add.go  add_test.go  init.go  init_test.go  publish.go  publish_test.go  root.go  serve.go  setup.go  setup_test.go  status.go  up.go  upgrade.go
demo/envoy-gateway-benchmark/: .gitignore  .mcp.json  METHODOLOGY.md  WRITEUP.md  analyze.py  backend-manifests.yaml  backends-with-policy.yaml  bench.py  client-traffic-policy-complete.yaml  client-traffic-policy-v1.3.0.yaml  client-traffic-policy.yaml  config.yaml  envoy-extension-policy-auth-enrichment.yaml  envoy-extension-policy-auth.yaml  envoy-extension-policy.yaml  evaluate.py  mycelium.toml  pyproject.toml  report.md  run-benchmark.sh
demo/envoy-gateway-benchmark/benchlib/: __init__.py  fact_scorer.py  judge_scorer.py  models.py  ndjson_parser.py  report.py  rubric_loader.py  runner.py  scheduler.py  stats.py  structure_scorer.py
demo/envoy-gateway-benchmark/manifests/: README.md  backend-traffic-policy.yaml  backends.yaml
demo/envoy-gateway-benchmark/tasks/: 01-discovery.md  01-discovery.reference.md  01-discovery.rubric.yaml  02-codegen.md  02-codegen.reference.md  02-codegen.rubric.yaml  03-config.md  03-config.reference.md  03-config.rubric.yaml  04-debugging.md  04-debugging.reference.md  04-debugging.rubric.yaml  05-extproc.md  05-extproc.reference.md  05-extproc.rubric.yaml
e2e/: e2e_test.go
internal/artifact/: artifact.go  artifact_test.go  checksum.go  checksum_test.go  (+2 more)
(+43 files in other folders)
